tests/grammar/ansi-92/case-expressions.test
# COALESCE with no args - error, missing right parens
>SELECT COALESCE(
Syntax error.
Expected to find one of ('*'|<< identifier >>) but found symbol[EOS]
SELECT COALESCE(
               ^
# COALESCE with no args - error, no args
>SELECT COALESCE()
Syntax error.
Expected to find one of ('*'|<< identifier >>) but found symbol[')']
SELECT COALESCE()
               ^^
# COALESCE with 2 args
>SELECT COALESCE(a, 'n/a') FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: coalesce[column-reference[a],literal['n/a']]
   referenced tables:
     0: t1>
# COALESCE with 4 args
>SELECT COALESCE(a, b, c, 'n/a') FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: coalesce[column-reference[a],column-reference[b],column-reference[c],literal['n/a']]
   referenced tables:
     0: t1>
# NULLIF with 2 args
>SELECT NULLIF(a, 'n/a') FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: nullif[column-reference[a],literal['n/a']]
   referenced tables:
     0: t1>
# Simple CASE expression single WHEN no ELSE
>SELECT CASE a WHEN 1 THEN 2 END FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: simple-case-expression[column-reference[a] WHEN literal[1] THEN literal[2]]
   referenced tables:
     0: t1>
# Simple CASE expression multiple WHEN no ELSE
>SELECT CASE a WHEN 1 THEN 2 WHEN 2 THEN 3 END FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: simple-case-expression[column-reference[a] WHEN literal[1] THEN literal[2] WHEN literal[2] THEN literal[3]]
   referenced tables:
     0: t1>
# Simple CASE expression single WHEN with ELSE
>SELECT CASE a WHEN 1 THEN 2 ELSE 42 END FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: simple-case-expression[column-reference[a] WHEN literal[1] THEN literal[2] ELSE literal[42]]
   referenced tables:
     0: t1>
# Simple CASE expression multiple WHEN with ELSE
>SELECT CASE a WHEN 1 THEN 2 WHEN 2 THEN 3 ELSE 4 END FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: simple-case-expression[column-reference[a] WHEN literal[1] THEN literal[2] WHEN literal[2] THEN literal[3] ELSE literal[4]]
   referenced tables:
     0: t1>
